--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.14.1"
+bevy-inspector-egui = "0.25.2"
+ron = "0.8"
+serde = { version = "1", features = ["derive"] }
+thiserror = "1.0.63"
+itertools = "0.13.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
