--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1.0.63"
 itertools = "0.13.0"
+derive_more = { version = "1.0.0", features = ["full"] }
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
